--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,8 @@ jobs:
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
-       with:
-  vercel-token: ${{ secrets.VERCEL_TOKEN }}
-  vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-  vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-
+          vercel_token: ${{ secrets.VERCEL_TOKEN }}
+          vercel_org_id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel_project_id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel_git_branch: ${{ github.ref_name }}
 
